--- a/package.json
+++ b/package.json
@@ -19,34 +19,30 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-actions-sheet": "^0.3.5",
+    "react-native-3dcube-navigation": "^1.0.4",
     "react-native-banner-carousel": "^1.0.3",
     "react-native-chart-kit": "^6.6.1",
     "react-native-circular-progress": "^1.3.6",
     "react-native-collapsible-tabs": "^1.0.2",
     "react-native-divider": "^1.0.3",
     "react-native-elements": "^2.3.1",
-    "react-native-fast-image": "^8.3.2",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-image-crop-picker": "^0.35.0",
     "react-native-image-gallery": "^2.1.5",
-    "react-native-image-header-scroll-view": "^0.10.3",
-    "react-native-image-picker": "^2.3.3",
-    "react-native-lightbox": "^0.8.1",
     "react-native-material-tabs": "^4.1.2",
+    "react-native-modalbox": "^2.0.2",
     "react-native-paper": "^4.1.0",
     "react-native-progress": "^4.1.2",
-    "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-simple-toast": "^1.1.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-speedometer": "^1.0.5",
-    "react-native-speedometer-chart": "^0.7.5",
-    "react-native-sticky-parallax-header": "^0.4.0",
     "react-native-svg": "^12.1.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-vector-icons": "^7.0.0",
+    "react-native-video": "^5.1.0-alpha8",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
